# Dice-and-Destiny

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  pyproject.toml
Artwork/generator/: README.md  __init__.py  __main__.py  config.py  main.py  pyproject.toml
Artwork/generator/api/: __init__.py  gemini_client.py
Artwork/generator/generators/: __init__.py  adventure_generator.py  character_generator.py
Artwork/generator/prompts/: __init__.py  base_prompts.py
Rules_and_Guides/: Beginners_Rulebook.docx  Character_Art_Guide.docx  Character_Sheets.docx  DD_Beginners_Rulebook.docx  DD_Character_Art_Guide.docx  Getting_Started_Guide.docx  character_art.js  character_sheets.js  getting_started.js  rulebook.js
Stories/: STORY_CREATION_GUIDE.md  STORY_TEMPLATE.js
Stories/The_Dragons_Friends/: Adventure_The_Dragons_Friends.docx  DD_Adventure_The_Dragons_Friends.docx  Game_Maps.docx  adventure.js  maps.js
docs/: adventure-the-dragons-friends.md  beginners-rulebook.md  character-art-guide.md  character-sheets.md  game-maps.md  getting-started-guide.md  index.md
