[project]
name = "dice-and-destiny"
version = "0.1.0"
description = "A custom tabletop role-playing game system with comprehensive rules, character art, and modular adventures"
requires-python = ">=3.10"
dependencies = [
    "generator",
    "markitdown[all]>=0.1.3",
    "python-docx>=1.2.0",
]

[tool.uv.workspace]
members = [
    "Artwork/generator",
]

[tool.uv.sources]
generator = { workspace = true }
