[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generator"
version = "0.1.0"
description = "Artwork generator for Dice and Destiny - generates character art and adventure scene prompts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Dice and Destiny"}]
dependencies = [
    "click>=8.0.0",
    "google-generativeai>=0.3.0",
    "pillow>=9.0.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
]

[project.scripts]
generate-image = "generator.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "pylint>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["generator"]
directory = "."

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]
